# soeiro-notes

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  soeirotech-mobile.html  soeirotech-ultra-bookmarks.html
.github/workflows/: deploy.yml
docs/guides/: guia_home_work.md  index.md
docs/guides/Checklist-Software/: CHECKLIST-PROFISSIONAL-SOFTWARE-2025.md
docs/guides/Projetos-Proposta/: 1) guia-sistemas-enem.md  2) readme-portfolio-sistemas.md  4) pitchdeck-sistemas.md  PROMPT-MEU-FUTURO-MEDICO.md  mkdocs-enem-sistemas.md
docs/guides/ai/: prompts.md
docs/guides/backend/: VALIDACOES_CLEAN_FORMS_DJANGO_2025.md  django.md  drf.md
docs/guides/frontend/: react.md  tailwind.md
guides/: index.html
guides/ChatGPT-CodeGPT-GitHub-Copilot/: index.html
guides/Checklist-Software/CHECKLIST-PROFISSIONAL-SOFTWARE-2025/: index.html
guides/Projetos-Proposta/1) guia-sistemas-enem/: index.html
guides/Projetos-Proposta/2) readme-portfolio-sistemas/: index.html
guides/Projetos-Proposta/3) mkdocs-enem-sistemas/: index.html
guides/Projetos-Proposta/4) pitchdeck-sistemas/: index.html
guides/Projetos-Proposta/PROMPT-MEU-FUTURO-MEDICO/: index.html
guides/Projetos-Proposta/guia-sistemas-enem/: index.html
guides/Projetos-Proposta/mkdocs-enem-sistemas/: index.html
guides/Projetos-Proposta/pitchdeck-sistemas/: index.html
guides/ai/prompts/: index.html
guides/backend/: auth.md
guides/devops/: docker.md  github-actions.md
guides/frontend/: vite.md
guides/guia_home_work/: index.html
search/: search_index.json
(+31 files in other folders)
